[tool.poetry]
name = "blanksuperbphysics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fast-soup = "^1.1.0"
bs4 = "^0.0.1"
uszipcode = "^0.2.4"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
